refactor: Clean up code and remove all warnings and weak warnings